# vkl_lib

./: .gitignore  Makefile.am  Makefile.in  README.md  configure  configure.ac  makefile
documentation/: imagePlane.txt  massModel.txt  sourcePlane.txt
include/: constants.hpp  covKernels.hpp  fitsInterface.hpp  imagePlane.hpp  irreGrid.hpp  jsonParsers.hpp  lightProfile.hpp  massModels.hpp  nonLinearPars.hpp  rectGrid.hpp  sourcePlane.hpp  sourceProfile.hpp  tableDefinition.hpp  vkllib.hpp
src/: adaptiveSource.cpp  baseSourcePlane.cpp  constants.cpp  covKernels.cpp  fitsInterface.cpp  fixedSource.cpp  imagePlane.cpp  irreGrid.cpp  jsonParsers.cpp  lightProfile.cpp  massModels.cpp  nonLinearPars.cpp  rectGrid.cpp  sourcePlane.cpp  sourceProfile.cpp
tests/: build.sh  plot_rectGrid.py  test_RectGrid.cpp
